# tree-sitter-klein

./: .prettier.toml  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  test.kl  tree-sitter.json
bindings/c/: tree-sitter-klein.pc.in
bindings/go/: binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_klein/: __init__.py  binding.c
bindings/rust/: lib.rs
bindings/swift/TreeSitterKleinTests/: TreeSitterKleinTests.swift
queries/: highlights.scm
scripts/: nvim
src/: grammar.json  node-types.json  parser.c
